RESOLVED FIXED138886
Images/replaced elements that are as tall as a page should be on their own page
https://bugs.webkit.org/show_bug.cgi?id=138886
Summary Images/replaced elements that are as tall as a page should be on their own page
Dave Hyatt
Reported 2014-11-19 14:45:28 PST
Images/replaced elements that are as tall as a page should be on their own page if they can fit with excess blank space removed.
Attachments
Patch (133.91 KB, patch)
2014-11-19 14:51 PST, Dave Hyatt
dino: review+
Dave Hyatt
Comment 1 2014-11-19 14:51:49 PST
WebKit Commit Bot
Comment 2 2014-11-19 14:53:29 PST
Attachment 241891 [details] did not pass style-queue: ERROR: Source/WebCore/rendering/RenderBlockFlow.cpp:1643: Multi line control clauses should use braces. [whitespace/braces] [4] Total errors found: 1 in 12 files If any of these errors are false positives, please file a bug against check-webkit-style.
Dave Hyatt
Comment 3 2014-11-19 15:40:18 PST
Fixed in r176354.
Jon Lee
Comment 4 2014-11-20 08:34:47 PST
Note You need to log in before you can comment on or make changes to this bug.